# RadeonRays_SDK

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CI_WORKFLOW.md  CMakeLists.txt  LICENSE.txt  OpenCLSearch.lua  README.md  build.cmd  build.pl  completebuild.pl  premake4.lua  premake5.lua
CLW/: CLW.h  CLW.lua  CLWBuffer.h  CLWCommandQueue.cpp  CLWCommandQueue.h  CLWContext.cpp  CLWContext.h  CLWDevice.cpp  CLWDevice.h  CLWEvent.cpp  CLWEvent.h  CLWExcept.h  CLWImage2D.cpp  CLWImage2D.h  CLWKernel.cpp  CLWKernel.h  CLWParallelPrimitives.cpp  CLWParallelPrimitives.h  CLWPlatform.cpp  CLWPlatform.h  CLWProgram.cpp  CLWProgram.h  CMakeLists.txt  ParameterHolder.cpp  ParameterHolder.h  ReferenceCounter.cpp  ReferenceCounter.h  cmake_install.cmake
CLW/CL/: CLW.cl
CLW/CL/cache/: kernels.h
CLW/kernelcache/: clwkernels_cl.h
Calc/: CMakeLists.txt  Calc.lua
Calc/inc/: buffer.h  buffer_vk.h  calc.h  calc_cl.h  calc_common.h  calc_hipw.h  calc_vk.h  device.h  device_cl.h  device_hip.h  device_vk.h  event.h  event_clw.h  except.h  executable.h  primitives.h
Calc/src/: calc.cpp  calc_clw.cpp  calc_clw.h  calc_clw_common.h  calc_hipw.cpp  calc_metal.h  calc_metal.mm  calc_vkw.cpp  calc_vkw.h  common_vk.h  device_clw.cpp  device_clw.h  device_hip.cpp  device_vkw.cpp  device_vkw.h  event_vk.h  except_clw.h  except_vk.h  executable_vk.h  function_vk.h
Calc/src/Hip/: common.cu  device_hipw.h  executable_hipw.cpp  executable_hipw.h  function_bvh2_bittrail.cpp  function_bvh2_short_stack.cpp  function_bvh2_skiplinks.cpp  function_bvh2level_skiplinks.cpp  function_hlbvh_stack.cpp  intersect_bvh2_bittrail.cu  intersect_bvh2_short_stack.cu  intersect_bvh2_skiplinks.cu  intersect_bvh2level_skiplinks.cu  intersect_hlbvh_stack.cu  math_utils.cu
RadeonRays/: CMakeLists.txt  RadeonRays.lua
RadeonRays/include/: radeon_rays.h  radeon_rays_cl.h  radeon_rays_vk.h  radeonrays_vk.h
RadeonRays/include/math/: bbox.h  float2.h  float3.h  int2.h  int3.h  mathutils.h  matrix.h  quaternion.h  ray.h
RadeonRays/src/accelerator/: bvh.cpp  bvh.h  bvh2.cpp  bvh2.h  hlbvh.cpp  hlbvh.h  split_bvh.cpp  split_bvh.h  sse2neon.h
RadeonRays/src/api/: radeon_rays.cpp  radeon_rays_impl.cpp  radeon_rays_impl.h
RadeonRays/src/async/: thread_pool.h
RadeonRays/src/device/: calc_holder.h  calc_intersection_device.cpp  calc_intersection_device.h  calc_intersection_device_cl.cpp  calc_intersection_device_cl.h  calc_intersection_device_vk.cpp  calc_intersection_device_vk.h  embree_intersection_device.cpp  embree_intersection_device.h  hip_intersection_device.cpp  hip_intersection_device.h  intersection_device.h
RadeonRays/src/except/: except.h
RadeonRays/src/intersection/: radeon_rays.cpp  radeon_rays_impl.cpp  radeon_rays_impl.h
RadeonRays/src/intersector/: intersector.cpp  intersector.h  intersector_2level.cpp  intersector_2level.h  intersector_bittrail.cpp  intersector_bittrail.h  intersector_curves.cpp  intersector_curves.h  intersector_hlbvh.cpp  intersector_hlbvh.h  intersector_lds.cpp  intersector_lds.h  intersector_short_stack.cpp  intersector_short_stack.h  intersector_skip_links.cpp  intersector_skip_links.h
RadeonRays/src/kernel/CL/: bvh.cl  bvh2l.cl  fatbvh.cl  grid.cl
RadeonRays/src/kernel/GLSL/: hlbvh_IntersectClosest.comp  hlbvh_IntersectClosestRC.comp  hlbvh_build_BuildHierarchy.comp  hlbvh_build_CalcMortonCode.comp
RadeonRays/src/kernelcache/: kernels_cl.h  kernels_vk.h
RadeonRays/src/kernels/: CMakeLists.txt
RadeonRays/src/kernels/CL/: CMakeLists.txt  build_hlbvh.cl  bvh.cl  bvh2l.cl  common.cl  fatbvh.cl  grid.cl  hash_bvh.cl  hlbvh.cl  intersect_bvh2_bittrail.cl  intersect_bvh2_curves.cl  intersect_bvh2_lds.cl  intersect_bvh2_lds_fp16.cl  intersect_bvh2_short_stack.cl  intersect_bvh2_skiplinks.cl  intersect_bvh2level_skiplinks.cl  intersect_hlbvh_stack.cl  qbvh.cl
RadeonRays/src/primitive/: curves.cpp  curves.h  instance.h  mesh.cpp  mesh.h  shapeimpl.h
RadeonRays/src/strategy/: bvh2lstrategy.cpp  bvh2lstrategy.h  bvhstrategy.cpp  bvhstrategy.h  fatbvhstrategy.cpp  fatbvhstrategy.h  hash_strategy.cpp  hash_strategy.h  hlbvh_strategy.cpp  hlbvh_strategy.h  strategy.h
RadeonRays/src/translator/: fatnode_bvh_translator.cpp  fatnode_bvh_translator.h  plain_bvh_translator.cpp  plain_bvh_translator.h  q_bvh_translator.cpp  q_bvh_translator.h
RadeonRays/src/util/: alignedalloc.h  cputimer.cpp  cputimer.h  options.cpp  options.h  perfect_hash_map.h  progressreporter.h
RadeonRays/src/world/: world.cpp  world.h
Tutorials/CornellBox/: CMakeLists.txt  CornellBox.lua  main.cpp
Tutorials/Tools/: CMakeLists.txt  shader_manager.cpp  shader_manager.h
UnitTest/: CMakeLists.txt  UnitTest.lua  calc_test_cl.h  calc_test_metal.h  calc_test_vk.h  clw_cl_test.h  clw_test.h  clw_test_cl.h  firerays_cl_test.h  firerays_conformance_test.h  firerays_performance_test.h  firerays_test.h  radeon_rays_apitest_cl.h  radeon_rays_apitest_embree.h  radeon_rays_apitest_hip.h  radeon_rays_apitest_vk.h  radeon_rays_cl_test.h  radeon_rays_conformance_test.h  radeon_rays_conformance_test_cl.h  radeon_rays_conformance_test_embree.h  radeon_rays_conformance_test_vk.h  radeon_rays_performance_test.h  radeon_rays_performance_test_cl.h  radeon_rays_test.h  radeon_rays_test_cl.h  test_main.cpp  tiny_obj_loader.cpp  tiny_obj_loader.h  utils.cpp  utils.h
bvh_analyzer/: CMakeLists.txt  aabb.h  bvh.h  bvh_node.h  common.h  config.h  float2.h  float3.h  intersection_primitives.h  main.cpp  transform.h  triangle.h
radeonrays/dx/tutorial/: CMakeLists.txt  application.h
radeonrays/mtl/tutorial/: CMakeLists.txt  mesh_data.h
radeonrays/vk/tutorial/: CMakeLists.txt  application.h
src/core/: CMakeLists.txt
src/core/include/: radeonrays.h  radeonrays_dx.h  radeonrays_vlk.h
src/core/src/: context.h  radeonrays.cpp
test/test_dx/: CMakeLists.txt  algos_test.h  basic_test.h  bvh.hlsl  hlbvh_test.h  main.cpp  raytrace_bvh2.hlsl
test/test_dx/dx/: common.h  dxassist.cpp  dxassist.h
test/test_vk/: CMakeLists.txt  algos_test.h  basic_test.h  common.h  hlbvh_test.h  internal_resources_test.h  main.cpp
(+472 files in other folders)
